# cpp

./: .gitignore
8puzzle/: CMakeLists.txt  board.cpp  board.h  main.cpp  solver.cpp  solver.h
IPC/: CMakeLists.txt  client.cpp  common.h  server.cpp
cmake/: CMakeLists.txt  main.cpp  mixedlib.cpp  mixedlib.h  sharedlib.cpp  sharedlib.h  sharedlibrary.cpp  sharedlibrary.h  staticlib.cpp  staticlib.h
concurency/future_promise/: CMakeLists.txt  main.cpp
concurency/producer_consumer/: CMakeLists.txt  buffer.cpp  buffer.h  main.cpp
data_structures_and_algorithms/: CMakeLists.txt  array.h  bstree.h  data_structures_and_algorithms  data_structures_and_algorithms.cbp  list.h  main.cpp  sort.cpp  sort.h
data_structures_and_algorithms/tests/: bst_test.cpp  bst_test.h  list_test.cpp  list_test.h  test.cpp
design_patterns/template_decorator/: CMakeLists.txt  main.cpp
template_meta_programming/: CMakeLists.txt  enable_if.h  fibonacci.h  main.cpp  prime.h  static_list.h  strong_type.h
the_rule_of_/: CMakeLists.txt  main.cpp  rule_of_five.cpp  rule_of_five.h  rule_of_three.cpp  rule_of_three.h  rule_of_zero.cpp  rule_of_zero.h
tmp/fibonacci/: CMakeLists.txt  main.cpp
